<resources>
    <string name="app_name" translatable="false">Wi-Fi Auto</string>
    <string name="pref_service_category">Service</string>
    <string name="pref_service_enabled">Enable Wi-Fi monitoring</string>
    <string name="pref_service_enabled_summary">Wi-Fi connectivity will be checked</string>
    <string name="pref_service_enabled_summary_off">Wi-Fi monitoring is disabled</string>
    <string name="pref_service_geofence">Enable Wi-Fi at current location</string>
    <string name="pref_service_geofence_summary">Wi-Fi will automatically be enabled</string>
    <string name="pref_service_geofence_summary_off">Wi-Fi will not automatically be enabled</string>
    <string name="pref_about_category">About this application</string>
    <string name="pref_about_version">Version</string>
    <string name="pref_about_licenses">Licenses</string>
    <string name="pref_about_licenses_summary">Show software included in this application</string>
    <string name="pref_about_source_code">Source code</string>
    <string name="pref_about_source_code_summary">Show application source code</string>
    <string name="pref_about_icon">Icon</string>
    <string name="pref_about_icon_summary">Icon kindly donated by Famil Qasimo</string>
    <string name="pref_about_icon_url" translatable="false">https://github.com/familqasimov</string>
    <string name="pref_event_log">Show event log</string>
    <string name="pref_event_log_summary">Show what happened within this app</string>
    <string name="source_code_ref" translatable="false">http://github.com/alexandreroman/wifiauto</string>
    <string name="software_licenses">Software licenses</string>
    <string name="info">When your device cannot connect to any Wi-Fi network, Wi-Fi is automatically disabled, in order to save battery.</string>
    <string name="event_log">Event log</string>
    <string name="event_log_reset">Reset</string>
    <string name="notif_channel_monitoring_wifi">Wi-Fi monitoring</string>
    <string name="service_monitoring_wifi">Monitoring Wi-Fi connectivity</string>
</resources>
